# cosmdex-terminal-starter

./: .gitignore  README.md  build.ps1
app/: activity.html  cosmos.toml  dashboard.html  index.html  liquidity.html  markets.html  trade.html
app/.well-known/: cosmos.toml
app/css/: app.css
app/js/: app.js  charts.js  config.js  cosmos-toml.js  toml.js  wallet.js
artifacts/: checksums.txt  cosmdex_orderbook.wasm
contracts/cosmdex-orderbook/: Cargo.toml
contracts/cosmdex-orderbook/examples/: schema.rs
contracts/cosmdex-orderbook/schema/: cosmdex-orderbook.json
contracts/cosmdex-orderbook/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_fills_by_order.json  response_to_market_book.json  response_to_markets.json  response_to_order.json  response_to_orders_by_market.json
contracts/cosmdex-orderbook/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
services/metadata/: tokens.json
services/pair-registry/: pairs.json
