[package]
name = "cosmdex-orderbook"
version = "0.1.0"
edition = "2021"
authors = ["Atom Registry"]
description = "Cosmos DEX Terminal orderbook contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-schema = "2.3.2"
cosmwasm-std = { version = "2.1.4", features = ["stargate"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = "1.0.69"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false